--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,9 @@
             <name>onebeartoe Maven Repository</name>
             <url>http://onebeartoe.org/maven/2/repository/</url>
             <releases>
-                <updatePolicy>always</updatePolicy>
+              <enabled>true</enabled>
+              <updatePolicy>always</updatePolicy>
+              <checksumPolicy>warn</checksumPolicy>
             </releases>
         </repository>
     </repositories>
