--- a/maven/system-dependencies/pom.xml
+++ b/maven/system-dependencies/pom.xml
@@ -31,6 +31,23 @@
     <build>     
         <plugins>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.17</version>
+                <configuration>
+                    <skipTests>false</skipTests>
+
+                    <properties>
+
+                    </properties>
+
+                    <suiteXmlFiles>
+                        <suiteXmlFile>src/test/resources/unit-testng.xml</suiteXmlFile>
+                    </suiteXmlFiles>
+                </configuration>
+            </plugin>            
+            
+            <plugin>
 		<artifactId>maven-assembly-plugin</artifactId>
 		<configuration>
 		    <archive>
