--- a/html-utility/pom.xml
+++ b/html-utility/pom.xml
@@ -44,6 +44,23 @@
     <build>
         <plugins>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.17</version>
+                <configuration>
+                    <skipTests>false</skipTests>
+
+                    <properties>
+
+                    </properties>
+
+                    <suiteXmlFiles>
+                        <suiteXmlFile>src/test/resources/unit-testng.xml</suiteXmlFile>
+                    </suiteXmlFiles>
+                </configuration>
+            </plugin>
+
+            <plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
                 <configuration>
                     <archive>
@@ -71,8 +88,7 @@
             </plugin>
         </plugins>
     </build>
-    
-    
+        
     <profiles>
         <profile>
             <id>jarsigner</id>
