--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,7 @@ addons:
 jdk:
   - oraclejdk8
 script:
-# build and scan the applications
-  - mvn -e clean org.jacoco:jacoco-maven-plugin:prepare-agent package sonar:sonar
+  - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent package sonar:sonar
 cache:
   directories:
     - '$HOME/.m2/repository'
