--- a/filesystem/watcher/command-line/pom.xml
+++ b/filesystem/watcher/command-line/pom.xml
@@ -1,4 +1,3 @@
-
 <?xml version="1.0" encoding="UTF-8"?>
 
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
@@ -98,7 +97,10 @@
                     <execution>
                         <id>build-cli-watch</id>
                         <configuration>
+<!--                            
                             <appendAssemblyId>false</appendAssemblyId>
+                            <classifier>file-watcher</classifier>
+-->                                                        
                             <archive>
                                 <manifest>
                                     <mainClass>org.onebeartoe.filesystem.watcher.FileWatcherApplication</mainClass>
