--- a/filesystem/watcher/command-line/pom.xml
+++ b/filesystem/watcher/command-line/pom.xml
@@ -32,6 +32,12 @@
 
     <dependencies>
         <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>19.0</version>
+        </dependency>
+        
+        <dependency>
             <groupId>org.onebeartoe</groupId>
             <artifactId>onebeartoe-application</artifactId>
             <version>1.0</version>
