--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ addons:
 jdk:
   - oraclejdk8
 script:
-  - mvn --quiet clean org.jacoco:jacoco-maven-plugin:prepare-agent package sonar:sonar
+  - mvn --quiet clean org.jacoco:jacoco-maven-plugin:prepare-agent verify sonar:sonar
 cache:
   directories:
     - '$HOME/.m2/repository'
