--- a/data-visualization/titanic-statistics/pom.xml
+++ b/data-visualization/titanic-statistics/pom.xml
@@ -31,7 +31,7 @@
             <version>10.8.3.0</version>
         </dependency>
         
-<dependency>
+        <dependency>
 		<groupId>org.junit.jupiter</groupId>
 		<artifactId>junit-jupiter-engine</artifactId>
 		<version>5.5.2</version>
@@ -39,9 +39,8 @@
 	</dependency>
     </dependencies>
     
- <build>
+    <build>
         <plugins>
-
             <!-- Need at least 2.22.0 to support JUnit 5 -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -59,6 +58,11 @@
                 </configuration>
             </plugin>
 
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-site-plugin</artifactId>
+                <version>3.8.2</version>
+            </plugin>
         </plugins>
     </build>    
 </project>
