--- a/maven/system-dependencies/pom.xml
+++ b/maven/system-dependencies/pom.xml
@@ -26,6 +26,12 @@
             <artifactId>onebeartoe-application</artifactId>
             <version>1.0</version>
         </dependency>        
+        
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>7.6.1</version>
+        </dependency>
     </dependencies>    
 
     <build>     
