--- a/data-visualization/pom.xml
+++ b/data-visualization/pom.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
@@ -10,6 +10,7 @@
     <packaging>pom</packaging>
     <modules>
         <module>titanic-statistics</module>
+        <module>titanic-fx-view</module>
     </modules>
     <name>onebeartoe-development-tools-data-visualization</name>
 </project>
