--- a/android/adb-tool/pom.xml
+++ b/android/adb-tool/pom.xml
@@ -32,6 +32,21 @@
             <artifactId>onebeartoe-system</artifactId>  
             <version>1.0</version>
         </dependency>
+        
+        <!-- https://mvnrepository.com/artifact/org.openjfx/javafx 
+<dependency>
+    <groupId>org.openjfx</groupId>
+    <artifactId>javafx</artifactId>
+    <version>15</version>
+</dependency>
+-->
+
+<dependency>
+      <groupId>org.openjfx</groupId>
+      <artifactId>javafx-controls</artifactId>
+      <version>15</version>
+    </dependency>
+
     </dependencies>
     
     <build>
