--- a/html-utility/pom.xml
+++ b/html-utility/pom.xml
@@ -73,6 +73,7 @@
 
             <plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
+                <version>3.4.2</version>
                 <configuration>
                     <archive>
                         <manifest>
