--- a/data-visualization/titanic-fx-view/pom.xml
+++ b/data-visualization/titanic-fx-view/pom.xml
@@ -21,6 +21,12 @@
     
     <dependencies>
         <dependency>
+            <groupId>org.onebeartoe.development.tools</groupId>
+            <artifactId>titanic-statistics</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        
+        <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-controls</artifactId>
             <version>13</version>
